# zeroclaw

./: .cargo-tizen.toml  .dockerignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.debian  README.md  SPEC.md  build.rs  deny.toml  install.sh  setup.bat
.github/: labeler.yml  pull_request_template.md
.github/workflows/: checks-on-pr.yml  ci-run.yml  cross-platform-build-manual.yml  pre-release-validate.yml  pub-homebrew-core.yml  publish-crates-auto.yml  publish-crates.yml  release-beta-on-push.yml  release-stable-manual.yml
crates/zeroclaw-api/src/: lib.rs  observability_traits.rs
crates/zeroclaw-channels/: Cargo.toml
crates/zeroclaw-channels/src/: lib.rs  telegram.rs
crates/zeroclaw-channels/src/orchestrator/: mod.rs
crates/zeroclaw-config/: Cargo.toml
crates/zeroclaw-config/src/: autonomy.rs  helpers.rs  migration.rs  policy.rs  provider_aliases.rs  providers.rs  scattered_types.rs  schema.rs  traits.rs
crates/zeroclaw-config/src/platform/: mod.rs
crates/zeroclaw-gateway/: Cargo.toml
crates/zeroclaw-gateway/src/: api.rs  lib.rs  sse.rs
crates/zeroclaw-macros/src/: lib.rs
crates/zeroclaw-memory/src/: backend.rs  embeddings.rs  lib.rs
crates/zeroclaw-plugins/src/: signature.rs
crates/zeroclaw-providers/: Cargo.toml
crates/zeroclaw-providers/src/: anthropic.rs  compatible.rs  gemini.rs  lib.rs
crates/zeroclaw-runtime/: AGENTS.md  Cargo.toml
crates/zeroclaw-runtime/src/: lib.rs  util.rs
crates/zeroclaw-runtime/src/agent/: agent.rs  context_analyzer.rs  loop_.rs  system_prompt.rs
crates/zeroclaw-runtime/src/cron/: scheduler.rs
crates/zeroclaw-runtime/src/daemon/: mod.rs
crates/zeroclaw-runtime/src/doctor/: mod.rs
crates/zeroclaw-runtime/src/integrations/: mod.rs  registry.rs
crates/zeroclaw-runtime/src/nodes/: transport.rs
crates/zeroclaw-runtime/src/observability/: log.rs  mod.rs  runtime_trace.rs  verbose.rs
crates/zeroclaw-runtime/src/platform/: mod.rs
crates/zeroclaw-runtime/src/security/: detect.rs  mod.rs
crates/zeroclaw-runtime/src/sop/: condition.rs  dispatch.rs  engine.rs  types.rs
crates/zeroclaw-runtime/src/tools/: cron_add.rs  cron_update.rs  delegate.rs  mod.rs  model_switch.rs
crates/zeroclaw-tool-call-parser/src/: lib.rs
crates/zeroclaw-tools/: Cargo.toml
crates/zeroclaw-tools/src/: claude_code_runner.rs  cli_discovery.rs  lib.rs  llm_task.rs  report_template_tool.rs  swarm.rs
docs/: README.md  SUMMARY.md
docs/architecture/: adr-004-tool-shared-state-ownership.md
docs/assets/: architecture-diagrams.md
docs/contributing/: cargo-slicer-speedup.md  change-playbooks.md  ci-map.md  custom-providers.md  docs-contract.md  label-registry.md  testing-telegram.md
docs/getting-started/: multi-model-setup.md
docs/i18n/: README.md
docs/i18n/ko/: README.md  SUMMARY.md
docs/maintainers/: docs-inventory.md  i18n-coverage.md  mass-close-audit-2026-04-12.md  refactor-candidates.md  repo-map.md  structure-README.md
docs/ops/: README.md  operations-runbook.md  proxy-agent-playbook.md  troubleshooting.md
docs/reference/: README.md
docs/reference/api/: channels-reference.md  config-reference.md  providers-reference.md
docs/reference/cli/: commands-reference.md
docs/reference/sop/: README.md  observability.md
docs/security/: README.md  matrix-e2ee-guide.md  security-roadmap.md
docs/setup-guides/: README.md  macos-update-uninstall.md  one-click-bootstrap.md  windows-setup.md
scripts/release/: bump-version.sh
src/: lib.rs  main.rs  util.rs
src/agent/: agent.rs  cost.rs  loop_.rs
src/channels/: matrix.rs  mod.rs
src/commands/: mod.rs  self_test.rs
src/config/: mod.rs  schema.rs
src/cost/: types.rs
src/gateway/: mod.rs
src/observability/: mod.rs  runtime_trace.rs
src/platform/: mod.rs
src/providers/: anthropic.rs  azure_openai.rs  bedrock.rs  compatible.rs  copilot.rs  gemini.rs  ollama.rs  openai.rs  openrouter.rs  router.rs  traits.rs
src/sop/: mod.rs
tests/: config_schema.rs
tests/component/: config_migration.rs  config_schema.rs  provider_resolution.rs
tests/manual/telegram/: test_telegram_integration.sh  testing-telegram.md
tests/support/: mock_provider.rs
tizen/: .cargo-tizen.toml  build-zeroclaw-rpm.sh  dev-update-zeroclaw.sh  release-zeroclaw-rpm.sh  tizen_deploy.sh  tizen_gateway_probe.sh
tizen/dev/: test-anthropic-auth.py  test-openai-auth.py
tizen/packaging/rpm/: zeroclaw.rpmrc  zeroclaw.spec
tizen/packaging/systemd/: zeroclaw.service
tizen/perf/: _rsdb_common.py  collect_process_memory_stats.py  collect_task_boundaries.py
tizen/rpm/: zeroclawlabs.spec
tool_descriptions/: en.toml  ko.toml
