[package]
name = "zeroclaw-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Channel implementations for messaging platform integrations."
publish = false

[dependencies]
zeroclaw-api.workspace = true
zeroclaw-infra.workspace = true
zeroclaw-config = { workspace = true, default-features = false }
zeroclaw-memory.workspace = true
zeroclaw-providers.workspace = true
zeroclaw-runtime.workspace = true
zeroclaw-tools.workspace = true
anyhow = "1.0"
lru = "0.16"
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "tokio", "query", "ws", "macros"] }
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
directories = "6.0"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
hmac = "0.12"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"], optional = true }
parking_lot = "0.12"
portable-atomic = "1"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots-no-provider", "__rustls-ring", "multipart", "stream"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
sha2 = "0.10"
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "fs", "signal"] }
tokio-util = { version = "0.7", default-features = false }
toml = "1.0"
tracing = { version = "0.1", default-features = false }
urlencoding = "2.1"
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }
hex = "0.4"
nanohtml2text = "0.2"
rand = "0.9"
shellexpand = "3.1"

[features]
default = ["channel-telegram", "channel-webhook"]
channel-telegram = ["dep:image"]
channel-webhook = []

[dev-dependencies]
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter"] }
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "tokio"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
tempfile = "3.26"
toml = "1.0"
wiremock = "0.6"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }
